--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.pauloroberto</groupId>
 	<artifactId>todosimple</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>todossimples</name>
-	<description>todossimples</description>
+	<name>todosimple</name>
+	<description>Spring Boot API for To Do App</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -21,6 +21,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
